mono (1.0.2-1) unstable; urgency=high

  * The "All or Nothing" release
  * New upstream release (Closes: #273675)
  * Mirco 'meebey' Bauer
    + applied debian/rules patch to fix FTBFS on i386 with amd64 kernel
      (Closes: #265510 thanks to Kurt Roeckx <Q@ping.be>)
    + removed all not official supported architectures
      (Closes: #272846, #259680)

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Thu, 11 Oct 2004 21:21:02 +0200

mono (1.0.1-1) unstable; urgency=medium

  * New upstream (bugfix) release

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Thu, 12 Aug 2004 13:46:04 +0200

mono (1.0-4) unstable; urgency=medium

  * the "sorry for forgetting the NOT RELEASED YET tags" release
  * Mono BSP
  * Mirco 'meebey' Bauer
    + debian/rules: s390 build should work now
      (showstopper for sarge, thus medium urgency)
    + debian/control: fixed typo, tuned Architecture field for mono (should
      finaly prevent "unallowed" architectures from trying to build mono)
    + debian/README.Debian: fixed typo
  * Eduard Bloch
    + --with-ntpl=no! When compiled with NTPL support, it still breaks on
      kernel 2.4 though not using the other libs (closes: #256755, #257412)
    + patched Makefiles to link explicitely with glib and dl, thanks to
      Russ Allbery <rra@stanford.edu> (closes: #262023)
    + disabled mono-mint build for i386 and powerpc, upstream wish

 -- Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>  Sun, 08 Aug 2004 16:38:32 +0200

mono (1.0-3) unstable; urgency=low

  * NOT RELEASED YET

 -- Eduard Bloch <blade@debian.org>  Wed,  7 Jul 2004 19:03:57 +0200

mono (1.0-2) unstable; urgency=medium

  * Eduard Bloch
    + Workarounds for FTBFS on architectures that have we already built for in
      the past
    + dh_makenetlibs: extremely ugly workaround for collecting library data
      even when not the whole assembly chain works (we need something more