@@ -6,24 +6,24 @@ export MONO_SHARED_DIR=$(CURDIR)
 
 DEB_BUILD_ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
-ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),sparc)
-JIT = --with-jit=no
-endif
+#ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),sparc)
+#JIT = --with-jit=no
+#endif
 
 ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),s390)
-JIT = --with-jit=no --with-nptl=no
+JIT = --with-jit=yes --with-nptl=no
 ATG = arch_target=s390
 endif
 
-ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),alpha)
-JIT = --with-jit=no
-ATG = arch_target=alpha
-endif
+#ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),alpha)
+#JIT = --with-jit=no
+#ATG = arch_target=alpha
+#endif
 
-ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),arm)
-JIT = --with-jit=no
-ATG = arch_target=arm
-endif
+#ifeq ($(shell dpkg-architecture -qDEB_BUILD_ARCH),arm)
+#JIT = --with-jit=no
+#ATG = arch_target=arm
+#endif
 
 VERSION = $(shell dpkg-parsechangelog | grep ^Vers | cut -d\  -f2)
 UPVERSION = $(shell echo $(VERSION) | sed 's,-.*,,')
@@ -43,7 +43,6 @@ cli-wrapper: debian/cli-wrapper.c
 	$(CC) -o cli-wrapper debian/cli-wrapper.c `pkg-config glib-2.0 --cflags --libs`
 
 build: patch build-stamp
-#build: build-stamp
 build-stamp: cli-wrapper
 	dh_testdir
 	# using a better dllmap (should be fixed since beta1)
@@ -60,7 +59,6 @@ build-stamp: cli-wrapper
 	touch build-stamp
 
 clean: unpatch
-#clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
@@ -98,7 +96,7 @@ install: build
 binary-indep: build install
 	dh_testdir -i
 	dh_testroot -i
-	dh_install -i --list-missing
+	dh_install -i
 	dh_link -i
 	dh_installchangelogs -i ChangeLog
 	dh_installdocs -i
@@ -118,7 +116,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir -s
 	dh_testroot -s
-	dh_install -s --list-missing
+	dh_install -s
 	dh_link -s
 	install -m644 -D debian/lintian debian/mono/usr/share/lintian/overrides/mono
 	dh_installchangelogs -s
